# multitenant-ai-platform-lite

./: .dockerignore  .env.example  .gitignore  =0.2.0  CUsersjerryDocumentsmultitenant-ai-platform-litetemp_login.json  CUsersjerryDocumentsmultitenant-ai-platform-litetest_results.txt  Dockerfile  FRONTEND_DOCUMENTATION.md  LAUNCH-READINESS-AUDIT.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_READINESS.md  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  run_tests.py  temp_login.json  temp_token.txt  tmp_aggregated.json  tmp_hotels_search.json
.github/workflows/: README.md  ci.yml  deploy.yml
.planning/: ITC_RATES_ENGINE_INTEGRATION_PLAN.md  MILESTONES.md  PRODUCTION-AUDIT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-ROADMAP.md  v1.0-bug-fixes.md  v3.0-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md
.planning/research/: RAG_FAISS_BEST_PRACTICES.md
clients/beachresorts/: .env.example
clients/example/: client.yaml  client.yaml.template
config/: __init__.py  database.py  loader.py  schema.json
database/: performance_indexes.sql
database/migrations/: 001_user_management.sql  004_performance_indexes.sql  006_additional_performance_indexes.sql  007_notifications.sql  009_core_table_rls.sql  010_tenant_settings.sql  011_add_sendgrid_columns.sql  011_tenants_registry.sql  013_logo_email_url.sql  016_inbound_tickets.sql  017_seed_africastay_tenant.sql  018_invoice_trip_details.sql  019_knowledge_documents.sql  020_quotes_line_items.sql
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  CODE_QUALITY_AUDIT.md  COMPLIANCE.md  EMAIL_AUTO_QUOTE_FLOW.md  ITC_HELPDESK_INTEGRATION_EVIDENCE.md  PERFORMANCE_AUDIT.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  REDIS_SETUP.md  SENDGRID_SUBUSERS.md  alerting-rules.yaml  disaster-recovery-plan.md
docs/legal/: privacy-policy-template.md  terms-of-service-template.md
docs/runbooks/: deployment.md  incident-response.md
frontend/: cors-env.yaml
frontend/internal-admin/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/tenant-dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.js
scripts/: README.md  assign_ip.py  assign_ip_v2.py  create_test_user.py  fix_sender.py  import_data.py  migrate_tenants_to_db.py  setup_admin_user.py  setup_client.py  validate_client.py
src/: __init__.py
src/agents/: __init__.py  helpdesk_agent.py  inbound_agent.py  llm_email_parser.py  quote_agent.py  universal_email_parser.py
src/api/: __init__.py  admin_analytics_routes.py  admin_knowledge_routes.py  admin_routes.py  admin_sendgrid_routes.py  admin_tenants_routes.py  analytics_routes.py  auth_routes.py  branding_routes.py  dependencies.py  helpdesk_routes.py  hotelbeds_routes.py  routes.py  (+15 more)
tests/: conftest.py  test_admin_analytics_routes.py  test_admin_knowledge_routes.py  test_admin_routes.py  test_admin_sendgrid_routes.py  test_admin_tenants_routes.py  test_analytics_routes.py  test_api_routes.py  test_auth_middleware.py  test_auth_routes.py  test_auth_service.py  test_auto_send_on_accept.py  test_bigquery_tool.py  test_branding_routes.py  test_circuit_breaker.py  test_config.py  test_core_routes.py  test_crm_service.py  test_css_classes.py  test_currency_conversion.py  test_currency_frontend_integration.py  test_dependencies.py  test_email_parser.py  test_email_sender.py  test_email_webhook.py  test_error_handler.py  test_error_handling.py  test_faiss_service.py  test_field_normalizers.py  test_helpdesk_agent.py  test_helpdesk_live.py  test_helpdesk_rag.py  test_helpdesk_routes.py  test_helpdesk_service.py  test_hotelbeds_client.py  test_hotelbeds_routes.py  test_inbound_agent.py  test_inbound_routes.py  test_integration_email_pipeline.py  test_integration_helpdesk_rag.py  (+65 more)
(+290 files in other folders)
