[project]
name = "multitenant-ai-platform-lite"
version = "1.0.0"
description = "Multi-Tenant AI Travel Platform Lite - CRM, Quotes, and Invoices for travel agencies"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src", "main.py", "config"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "venv/*",
    "htmlcov/*",
    ".planning/*",
]
branch = true
parallel = true
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
# Coverage threshold:
# - v3.0: 45% (achieved 2026-01-21, up from 27%)
# - v4.0: 57% (achieved 2026-01-22, comprehensive mocking for agents, RAG, FAISS)
# - Target: 70% (continued improvement requires additional route coverage)
# Prevents regression below current coverage level
fail_under = 57
show_missing = true
precision = 1

[tool.coverage.html]
directory = "htmlcov"
title = "Multi-Tenant AI Platform Test Coverage"
show_contexts = true
